--- a/.github/workflows/type.yml
+++ b/.github/workflows/type.yml
@@ -15,5 +15,7 @@ jobs:
         with:
           python-version: 3.9.6
           architecture: x64
+      - run: pip install flit==3.6.0
+      - run: flit install
       - run: pip install pytype==2022.1.31
       - run: pytype --config=pytype.cfg src/authk/*.py
