--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -29,10 +29,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
       - name: Install dependencies
-      - run: pip install flit==3.6.0
-      - run: flit install
-      - run: |
+        run: |
           python -m pip install --upgrade pip
+          pip install flit==3.6.0
+          flit install
           pip install flake8 pytest pytest-cov
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build coverage file
