--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9.6']
+        python-version: ["3.8", "3.9.6"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -21,4 +21,4 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - run: pip install flit==3.6.0
       - run: flit install
-      - run: cd test/unit; python3 -m unittest *.py
+      - run: cd tests/unit; python3 -m unittest *.py
