--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -50,9 +50,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Pytest coverage comment
+        if: ${{ github.ref == 'refs/heads/main' }}
         id: coverageComment
         uses: MishaKav/pytest-coverage-comment@main
         with:
+          hide-comment: false
           pytest-coverage-path: pytest-coverage.txt
           junitxml-path: pytest.xml
 
