Fix: Updated github workflows to avoid fails due to OS version
Description:
- Froze the version of ubuntu to 20.04 in all .yml files
- Updated actions/checkout and actions/setup-python to v3
- Removed the checklist from PR template as there's no need for it (instead we have linter and typer)

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
@@ -45,9 +45,9 @@ jobs:
 
   live-test:
     name: Live Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Pytest coverage comment
         if: ${{ github.ref == 'refs/heads/main' }}
