--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,9 +16,9 @@ concurrency:
   cancel-in-progress: true
 jobs:
   generate-changelog:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: BobAnkh/auto-generate-changelog@master
